@@ -2,6 +2,15 @@
 Version 1.6.6
 *******************************************************************************
 
+2008-04-24 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
+	*  SF Bug Tracker [ 1948586 ]
+	Uppercase U in in "xmlns:U" in Invoke Action causes seg. f.
+	Submitted By: Thomas Norheim - kjakan_no
+	Device no longer segfaults with the following malformed xml action:
+	<u:SetColor xmlns:U="urn:schemas-upnp-org:service:tvpicture:1">
+		<Color>2</Color>
+	</u:SetColor>
+
 2008-04-23 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
 	* Use -O0 in debug builds so that variables do not get optimized out.
 
